# src/routes/org.route.ts
@@ -4,16 +4,17 @@ import OrgController from "../controllers/org.controller"
 
 
 class OrgRoute {
-  private path = '/org'
-  private router = Router()
-  private orgController = new OrgController()
+  public path = '/org'
+  public router = Router()
+  public orgController = new OrgController()
 
   constructor() {
-
+    this.initializeRoutes();
   }
 
   private initializeRoutes() {
     this.router.get(`${this.path}`,this.orgController.get)
+    this.router.post(`${this.path}`,this.orgController.createOrg)
   }
 }
 
