# swagger.yaml
@@ -29,7 +29,7 @@ paths:
           type: integer
           minimum: 1
           default: 1
-        - name: perPage
+        - name: size
           in: query
           description: ''
           type: integer
@@ -64,7 +64,58 @@ paths:
       summary: login user
       tags:
         - Auth
-
+      parameters:
+        - name: body
+          in: body
+          description: User data
+          required: true
+          schema:
+            $ref: '#/definitions/UserInput'
+      responses:
+        200:
+          description: User created
+          schema:
+            $ref: '#/definitions/Login'
+  /org:
+    get:
+      summary: Retrieve a list of books
+      tags:
+        - Org
+      parameters:
+        - name: page
+          in: query
+          description: ''
+          type: integer
+          minimum: 1
+          default: 1
+        - name: size
+          in: query
+          description: ''
+          type: integer
+          minimum: 1
+          default: 10
+      responses:
+        200:
+          description: Successfully retrieved the list of books
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Org'
+  
+    post:
+      summary: Org
+      tags:
+        - Org
+      parameters:
+        - name: body
+          in: body
+          description: create org
+          required: true
+          schema:
+            $ref: '#/definitions/CreateOrg'
+      responses:
+        200:
+          description: Org created
 
   /product:
     get:
@@ -119,19 +170,6 @@ paths:
       
 
 definitions:
-  Book:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-        example: 1
-      title:
-        type: string
-        example: "The Great Gatsby"
-      author:
-        type: string
-        example: "F. Scott Fitzgerald"
   User:
     type: object
     properties:
@@ -199,4 +237,31 @@ definitions:
       category:
         type: string
         example: 'drinks'
+  UserInput:
+    type: object
+    properties:
+      phone_number:
+        type: string
+      password:
+        type: string
+  Login:
+    type: object
+    properties:
+      token: 
+        type: string
 
+  CreateOrg:
+    type: object
+    properties:
+      name_org:
+        type: string
+  Org:
+    type: object
+    properties:
+      name_org:
+        type: string
+      is_active:
+        type: boolean
+      is_deleted:
+        type: boolean
+    
